# SAMap_localpattern

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: theory.md
scripts/: validate_guarantees.py
src/localsamap/: __init__.py  statistics.py  validation.py
tests/: test_statistics.py  test_validation.py
validation/: guarantee_report.md
