[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "localsamap"
version = "0.1.0"
description = "Statistical calibration and local interpretation for SAMap mappings"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = ["numpy>=1.26", "pandas>=2.0", "scipy>=1.11"]

[project.optional-dependencies]
samap = ["sc-samap>=3.0.1"]
